added sort enum to swaggerDocumentation.yaml
