# backend/src/main/java/at/ac/tuwien/sepm/groupphase/backend/endpoint/ShowsEndpoint.java
@@ -4,6 +4,7 @@ import at.ac.tuwien.sepm.groupphase.backend.endpoint.dto.ShowDto;
 import at.ac.tuwien.sepm.groupphase.backend.endpoint.dto.ShowSearchDto;
 import at.ac.tuwien.sepm.groupphase.backend.endpoint.dto.ShowSearchResultDto;
 import at.ac.tuwien.sepm.groupphase.backend.endpoint.dto.ShowWithoutIdDto;
+import at.ac.tuwien.sepm.groupphase.backend.endpoint.dto.SortDto;
 import at.ac.tuwien.sepm.groupphase.backend.endpoint.interfaces.ShowsApi;
 import at.ac.tuwien.sepm.groupphase.backend.endpoint.mapper.ShowMapper;
 import at.ac.tuwien.sepm.groupphase.backend.service.ShowService;
@@ -34,7 +35,7 @@ public class ShowsEndpoint implements ShowsApi {
 
     @Override
     public ResponseEntity<ShowSearchResultDto> showsGet(
-        ShowSearchDto search, Integer pageSize, Integer requestedPage, String sort) {
+        ShowSearchDto search, Integer pageSize, Integer requestedPage, SortDto sort) {
         if (search.getDate() == null && search.getEvent() == null && search.getPrice() == null
             && search.getSeatingPlan() == null) {
             /* this is just a placeholderlogic to keep current eventsgetall
